fix: remove errorneous extra padding

--- a/components/dropdown/src/styles/classic/style.scss
+++ b/components/dropdown/src/styles/classic/style.scss
@@ -54,7 +54,6 @@
     overflow: hidden;
     flex: 1;
     justify-content: start;
-    padding-left: var(--ds-size-150, vac.$ds-size-150);
     text-overflow: ellipsis;
     white-space: nowrap;
   }
